--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,14 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
+//    CardView
     compile 'com.android.support:cardview-v7:23.1.0'
+//    RecyclerView
     compile 'com.android.support:recyclerview-v7:23.1.0'
+//    Parse dependencies
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.parse.bolts:bolts-android:1.2.1'
     compile files('libs/Parse-1.11.0.jar')
+//    CircleImageView
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
