--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ dependencies {
 //    Glide (image loading)
     compile 'com.github.bumptech.glide:glide:3.6.1'
 //    Parse dependencies
-    compile 'com.parse.bolts:bolts-android:1.2.1'
-    compile 'com.parse:parse-android:1.10.3'
-    compile files('libs/Parse-1.11.0.jar')
+   // compile 'com.parse.bolts:bolts-android:1.2.1'
+  //  compile 'com.parse:parse-android:1.10.3'
+    //compile files('libs/Parse-1.11.0.jar')
 
 }
